# manager/api/render.go
@@ -55,3 +55,15 @@ func (f FirmwareUpdateRequest) Bind(r *http.Request) error {
 func (f FirmwareStatus) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
+
+func (l LocalListVersionResponse) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
+
+func (l LocalAuthorizationListResponse) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
+
+func (u UpdateLocalListRequest) Bind(r *http.Request) error {
+	return nil
+}
